2018-10-06  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 4.0.3 release.
	* Added:
	More ways for the user to control the initial points and
	optimization process.
	Ability to control debug messages from solvers.
	* Changed:
	Format of the output log is more compact.
	Improved management of failed/discarded iterations.

2018-09-23  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_algorithm.py (update_log): changed log format.
	* rbfopt_algorithm.py (RbfoptAlgorithm): constructor now accepts
	do_init_strategy option.
	* rbfopt_algorithm.py (restart): added distance check for
	user-provided points.
	* rbfopt_settings.py : added options max_cycles and
	thresh_unlimited_refinement_stalled.

2018-08-29  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_algorithm.py (restoration_search_parallel): deleted.
	* rbfopt_algorithm.py (optimize_parallel): solved bug in parallel
	optimizer when evaluating RBF model (for temp_node_pos) after
	restarts.
	* rbfopt_algorithm.py (discarded_list): discarded points are now
	evaluated on a rolling basis.

2018-05-25  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 4.0.2 release.
	* Added:
	Detailed user manual.
	Improved testing tools.
	* Changed:
	Smaller formulation for the noisy interpolation models.
	Improved stability of the restoration step.

2018-05-24  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_algorithm.py (refinement_step): fixed bug in node
	deletion.
	* rbfopt_degreeX_models.py: reduced size of noisy interpolation
	models.
	* tests/test_rbfopt_algorithm.py: now only contains relatively
	fast tests; the slow tests have been isolated and are not run by
	default.
	* setup.cfg: added for fine-grained test definition.
	* setup.py: fixed possible infinite loop on Windows when using
	multiprocessing.
	
2018-03-09  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 4.0.1 released.
	* rbfopt_user_black_box.py: fixed naming of abstract methods.

2017-09-05  Giacomo Nannicini  <nannicini@us.ibm.com>