@@ -1,1 +1,1 @@
-RBFOpt version 4.0.3
+RBFOpt version 4.1.0
